2008-03-16  Hans Breuer  <hans@breuer.org>

	* sheets/*/*.xpm shapes/**/*.xpm : removed all those obsolete XPM

2008-03-10  Hans Breuer  <hans@breuer.org>

	* app/display.c(are_you_sure_close_dialog_respond) : don't close the
	display when saving failed. Fixes bug #501703

2008-03-09  Hans Breuer  <hans@breuer.org>

	* app/load_save.c(diagram_data_save) : not using g_access() because
	'My Documents' is write protected by default on XP but still can 
	contain writable files. With extended security attributes becoming
	more common this change may even become necessary for *nix?
	Fixes bug #504469.

	* objects/standard/outline.c : don't make Dia crash by returning NULL
	from get_object_menu. Fixes bug #503899.
	
	* plug-ins/cairo/Makefile.am : forgot diacairo-print.h here as well

	* lib/persistence.c : listen again to the configure-event and remove
	debug spew (the fix for bug #501475 broke the size storing completely)
	
	* plug-ins/cairo/diacairo-print.c : fix reference counting for cairo_t

	* bindings/test.py : make it work on windoze again

	* plug-ins/cairo/diacairo-renderer.c : hairline support

2008-03-08  Hans Breuer  <hans@breuer.org>

	* plug-ins/cairo/diacairo-print.c : use the cairo renderer for
	integration with the Gtk+ print framework
	* plug-ins/cairo/diacairo.c : gtk-print implementation for paginated 
	output of PDF (bug #513226) and register for printing, also ... 
	  plug-ins/cairo/diacairo-renderer.c : ... split off the renderer
	implmentation in it's own file. Some tweaking for use in the
	print context.
	* plug-ins/cairo/diacairo.h : calback function to be registered
	in the menu (later to replace native printing?)
	* plug-ins/cairo/Makefile.am plug-ins/makefile.msc : adapted

	* data/display-ui.xml data/popup-ui.xml : more *ExtensionStart to 
	allow placement of plug-in function in all sub-menus. Above it is 
	used for "File/Print with Gtk+/cairo ..."

	* plug-ins/cairo/diacairo-interactive.c : also compile with Gtk+ < 2.8
