@@ -47,7 +47,7 @@ PKG_LINK = $(GTK2_LIBS) $(GLIB_LIBS) \
 
 !IFDEF OBJ_cairo
 PKG_CFLAGS = $(PKG_CFLAGS) $(CAIRO_CFLAGS) -DHAVE_PANGOCAIRO_H
-PKG_LINK = $(PKG_LINK) $(CAIRO_LIBS) $(PANGOCAIRO_LIBS)
+PKG_LINK = $(PKG_LINK) $(CAIRO_LIBS) $(PANGOCAIRO_LIBS) gdi32.lib
 OBJECTS = \
 	diacairo.obj \
 	diacairo-interactive.obj \
